disconnect message functional

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -85,3 +85,9 @@ body {
   padding: 0 10px;
   text-decoration: none;
 }
+
+.online-users {
+  float: right;
+  line-height: 60px;
+  margin-right: 20px;
+}
