--- a/styles/home.scss
+++ b/styles/home.scss
@@ -91,3 +91,18 @@ body {
   line-height: 60px;
   margin-right: 20px;
 }
+
+.user-purple {
+  color: #800080;
+}
+
+.user-orange {
+  color: #ffa500;
+}
+.user-green {
+  color: #00FF00;
+}
+
+.user-blue {
+  color: #0000ff;
+}
